@@ -62,6 +62,13 @@
       </widget>
     </child>
     <child>
+      <widget class="GtkMenuItem" id="menuitem10">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">Open _Recent</property>
+        <property name="use_underline">True</property>
+      </widget>
+    </child>
+    <child>
       <widget class="GtkSeparatorMenuItem" id="menuitem9">
         <property name="visible">True</property>
       </widget>
